2026-03-01T01:24:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22533170107 # 892
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-03-01
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 1169 1649 / 1172 1652
* notice: next accum: outdated-unq outdated-all / unq all: 1171 1651 / 1172 1652
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-02-13] / []

2026-02-28T01:08:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22510017535 # 891
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-28
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 1169 1649 / 1172 1652
* notice: next accum: outdated-unq outdated-all / unq all: 1169 1649 / 1172 1652
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-02-11 2026-02-12] / []

2026-02-26T01:15:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22423504850 # 889
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-26
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 1166 1646 / 1169 1649
* notice: next accum: outdated-unq outdated-all / unq all: 1169 1649 / 1172 1652
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0