@@ -1,3 +1,12 @@
+2026-03-02T01:16:40Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22557498558 # 893
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-03-02
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 1171 1651 / 1172 1652
+* notice: next accum: outdated-unq outdated-all / unq all: 1171 1651 / 1172 1652
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-02-14] / []
+
 2026-03-01T01:24:43Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22533170107 # 892
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-03-01
